--- a/floran/Makefile
+++ b/floran/Makefile
@@ -6,7 +6,7 @@
 #    By: fmauguin <fmauguin@student.42.fr >         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/06/03 14:23:03 by fmauguin          #+#    #+#              #
-#    Updated: 2022/06/09 23:22:48 by fmauguin         ###   ########.fr        #
+#    Updated: 2022/06/10 09:20:36 by fmauguin         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,7 +22,7 @@ INCLUDE		=	../commun
 SRC_DIR		=	srcs/
 OBJ_DIR		=	obj/
 SRC_FILES	=	main debug free parse utils split_bash error split_redirect \
-				fill_struct
+				fill_struct check_line
 SRC			=	$(addsuffix .c, $(addprefix $(SRC_DIR), $(SRC_FILES)))
 OBJ			=	$(SRC:$(SRC_DIR)%.c=$(OBJ_DIR)%.o)
 
@@ -35,13 +35,13 @@ NONE = \033[0m
 
 $(NAME):	$(OBJ)
 			@make -C $(LIBFT_DIR)
-			@$(CC) $(CFLAGS) $(OBJ) -L$(LIBFT_DIR) -lft -o $@
+			@$(CC) $(NOFLAGS) $(OBJ) -L$(LIBFT_DIR) -lft -o $@
 			@printf "\t[ $(GREEN)✔$(NONE) ] "$@" done\n\n"
 			@printf "$(GREEN)Compiled "$@" successfully!\n $(NONE)\n"
 
 $(OBJ):		$(OBJ_DIR)%.o : $(SRC_DIR)%.c
 			@mkdir -p ${OBJ_DIR}
-			@$(CC) $(CFLAGS) -c $< -o $@
+			@$(CC) $(NOFLAGS) -c $< -o $@
 			@printf "\t[ $(GREEN)✔$(NONE) ] "$@" done\n"
 
 all:		$(NAME)
