handle empty arg and whitespaces args

--- a/floran/Makefile
+++ b/floran/Makefile
@@ -6,7 +6,7 @@
 #    By: fmauguin <fmauguin@student.42.fr >         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/06/03 14:23:03 by fmauguin          #+#    #+#              #
-#    Updated: 2022/06/10 09:20:36 by fmauguin         ###   ########.fr        #
+#    Updated: 2022/06/10 12:40:01 by fmauguin         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,7 +22,7 @@ INCLUDE		=	../commun
 SRC_DIR		=	srcs/
 OBJ_DIR		=	obj/
 SRC_FILES	=	main debug free parse utils split_bash error split_redirect \
-				fill_struct check_line
+				fill_struct check_line cmd_utils
 SRC			=	$(addsuffix .c, $(addprefix $(SRC_DIR), $(SRC_FILES)))
 OBJ			=	$(SRC:$(SRC_DIR)%.c=$(OBJ_DIR)%.o)
 
