--- a/germain/Makefile
+++ b/germain/Makefile
@@ -6,13 +6,18 @@
 #    By: gtoubol <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/05/25 10:59:36 by gtoubol           #+#    #+#              #
-#    Updated: 2022/06/13 15:45:37 by gtoubol          ###   ########.fr        #
+#    Updated: 2022/06/14 17:22:17 by gtoubol          ###   ########.fr        #
 #                                                                              #
 #******************************************************************************#
 
 # List of all the sources (.c)
 # -------------------------------------------------------------------------
-SRCS =		g_main.c interactive_session.c non_interactive_session.c
+SRCS = 		g_main.c interactive_session.c non_interactive_session.c 		\
+			interactive_signals.c signals_main_utils.c run_line.c 			\
+			run_pipe_series.c set_outpipe.c wait_all.c exec_processes.c		\
+			pid_memory_management.c clear_exec.c
+
+TMP =		tmp_exec.c ft_lstpop.c
 
 # List of the related directories
 # -------------------------------------------------------------------------
@@ -39,7 +44,7 @@ LIB =		-Llibft -lft -lreadline
 
 # General rules on makefile
 # -------------------------------------------------------------------------
-OBJS = 		$(addprefix $(SRCS_DIR)/,$(SRCS:.c=.o))
+OBJS = 		$(addprefix $(SRCS_DIR)/,$(SRCS:.c=.o) $(TMP:.c=.o))
 DEPS =		$(OBJS:.o=.d)
 
 INCLUDES =	$(addprefix -I,$(HEAD_DIR))
