--- a/floran/Makefile
+++ b/floran/Makefile
@@ -6,7 +6,7 @@
 #    By: fmauguin <fmauguin@student.42.fr >         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/06/03 14:23:03 by fmauguin          #+#    #+#              #
-#    Updated: 2022/06/14 17:36:11 by fmauguin         ###   ########.fr        #
+#    Updated: 2022/06/15 01:00:47 by fmauguin         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,11 +23,14 @@ SRCDIR				:=	.
 OBJDIR				:=	./obj
 DEBUGDIR			:=	./debugobj
 
-LEXERSRC			:=	lexer/lexer.c				\
+LEXERSRC			:=	lexer/main.c				\
+						lexer/lexer.c				\
 						lexer/utils.c				\
 						lexer/is_separator.c		\
 						lexer/is_redirect.c			\
-						lexer/is_word.c
+						lexer/is_word.c				\
+						lexer/tokens_alloc.c		\
+						lexer/free.c				\
 
 CC					:=	cc
 RM					:=	rm
