end lexer, '(' ok

--- a/floran/Makefile
+++ b/floran/Makefile
@@ -6,31 +6,33 @@
 #    By: fmauguin <fmauguin@student.42.fr >         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/06/03 14:23:03 by fmauguin          #+#    #+#              #
-#    Updated: 2022/06/15 01:00:47 by fmauguin         ###   ########.fr        #
+#    Updated: 2022/06/15 12:04:33 by fmauguin         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 SHELL				=	/bin/sh
 
-PROGNAME			:=	lexing
+PROGNAME			:=	minishell
 
 LIBFT				:=	../commun/libft/libft.a
 LIBFTDIR			:=	../commun/libft/includes
 
-INCLUDEDIR			:=	lexer
+INCLUDEDIR			:=	./includes
 SRCDIR				:=	.
 
 OBJDIR				:=	./obj
 DEBUGDIR			:=	./debugobj
 
-LEXERSRC			:=	lexer/main.c				\
-						lexer/lexer.c				\
+LEXERSRC			:=	lexer/lexer.c				\
 						lexer/utils.c				\
 						lexer/is_separator.c		\
 						lexer/is_redirect.c			\
 						lexer/is_word.c				\
+						lexer/is_prio.c				\
 						lexer/tokens_alloc.c		\
 						lexer/free.c				\
+
+PARSERSRC			:=	parser/main.c				\
 
 CC					:=	cc
 RM					:=	rm
@@ -57,8 +59,8 @@ $(OUTDIR)/%.o		:	$(SRCDIR)/%.c | $(OUTDIR)
 	@mkdir -p $(dir $@)
 	$(CC) -c -MMD -MP $(CCFLAGS) $(OPTFLAG) $(addprefix -I ,$(INCLUDEDIR)) $(addprefix -I ,$(LIBFTDIR)) $< -o $@
 
-$(NAME)				:	$(addprefix $(OUTDIR)/,$(LEXERSRC:.c=.o)) $(LIBFT)
-	$(CC) $(CCFLAGS) $(OPTFLAG) -o $(NAME) $(addprefix $(OUTDIR)/,$(LEXERSRC:.c=.o)) $(LIBFT) $(LIBFLAGS)
+$(NAME)				:	$(addprefix $(OUTDIR)/,$(LEXERSRC:.c=.o)) $(addprefix $(OUTDIR)/,$(PARSERSRC:.c=.o)) $(LIBFT)
+	$(CC) $(CCFLAGS) $(OPTFLAG) -o $(NAME) $(addprefix $(OUTDIR)/,$(LEXERSRC:.c=.o)) $(addprefix $(OUTDIR)/,$(PARSERSRC:.c=.o)) $(LIBFT) $(LIBFLAGS)
 
 all					:	$(NAME)
 
