lexer '.' ans struc repo for next phase

--- a/floran/Makefile
+++ b/floran/Makefile
@@ -6,7 +6,7 @@
 #    By: fmauguin <fmauguin@student.42.fr >         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/06/03 14:23:03 by fmauguin          #+#    #+#              #
-#    Updated: 2022/06/15 15:41:12 by fmauguin         ###   ########.fr        #
+#    Updated: 2022/06/15 16:21:07 by fmauguin         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,14 +17,13 @@ PROGNAME			:=	minishell
 LIBFT				:=	../commun/libft/libft.a
 LIBFTDIR			:=	../commun/libft/includes
 
-INCLUDEDIR			:=	./includes
+INCLUDEDIR			:=	./includes ../commun/
 SRCDIR				:=	.
 
 OBJDIR				:=	./obj
 DEBUGDIR			:=	./debugobj
 
 LEXERSRC			:=	lexer/lexer.c				\
-						lexer/utils.c				\
 						lexer/is_separator.c		\
 						lexer/is_redirect.c			\
 						lexer/is_word.c				\
@@ -34,6 +33,13 @@ LEXERSRC			:=	lexer/lexer.c				\
 
 PARSERSRC			:=	parser/main.c				\
 						parser/parser.c				\
+						parser/path.c				\
+
+UTILSSRC			:=	utils/ft_atoll.c			\
+						utils/ft_strndup.c			\
+						utils/print.c				\
+						utils/display_msg.c			\
+						utils/ft_join3.c			\
 
 CC					:=	cc
 RM					:=	rm
@@ -60,8 +66,8 @@ $(OUTDIR)/%.o		:	$(SRCDIR)/%.c | $(OUTDIR)
 	@mkdir -p $(dir $@)
 	$(CC) -c -MMD -MP $(CCFLAGS) $(OPTFLAG) $(addprefix -I ,$(INCLUDEDIR)) $(addprefix -I ,$(LIBFTDIR)) $< -o $@
 
-$(NAME)				:	$(addprefix $(OUTDIR)/,$(LEXERSRC:.c=.o)) $(addprefix $(OUTDIR)/,$(PARSERSRC:.c=.o)) $(LIBFT)
-	$(CC) $(CCFLAGS) $(OPTFLAG) -o $(NAME) $(addprefix $(OUTDIR)/,$(LEXERSRC:.c=.o)) $(addprefix $(OUTDIR)/,$(PARSERSRC:.c=.o)) $(LIBFT) $(LIBFLAGS)
+$(NAME)				:	$(addprefix $(OUTDIR)/,$(LEXERSRC:.c=.o)) $(addprefix $(OUTDIR)/,$(PARSERSRC:.c=.o)) $(addprefix $(OUTDIR)/,$(UTILSSRC:.c=.o)) $(LIBFT)
+	$(CC) $(CCFLAGS) $(OPTFLAG) -o $(NAME) $(addprefix $(OUTDIR)/,$(LEXERSRC:.c=.o)) $(addprefix $(OUTDIR)/,$(PARSERSRC:.c=.o)) $(addprefix $(OUTDIR)/,$(UTILSSRC:.c=.o)) $(LIBFT) $(LIBFLAGS)
 
 all					:	$(NAME)
 
