update of the builtins and rework of the pipe processing. -> redirections ok

--- a/germain/Makefile
+++ b/germain/Makefile
@@ -6,28 +6,59 @@
 #    By: gtoubol <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/05/25 10:59:36 by gtoubol           #+#    #+#              #
-#    Updated: 2022/06/17 16:28:51 by gtoubol          ###   ########.fr        #
+#    Updated: 2022/06/20 15:50:25 by gtoubol          ###   ########.fr        #
 #                                                                              #
 #******************************************************************************#
 
 # List of all the sources (.c)
 # -------------------------------------------------------------------------
-SRCS = 		ft_newdico.c ft_freedico.c ft_lstsort.c							\
-			environment_copy.c environment_add.c environment_remove.c		\
-			environment_get.c environment_format.c environment_set.c 		\
-			environment_var_compare.c										\
-			builtin_cd.c 													\
-			builtin_pwd.c 													\
-			builtin_export.c
 
-TMP =		#tmp_exec.c ft_lstpop.c
-TEST = 		test_cd.c test_export.c
+SRCS =		$(addprefix environment/,	environment_copy.c	\
+										environment_add.c	\
+										environment_remove.c\
+										environment_set.c	\
+										environment_get.c	\
+										environment_format.c\
+										environment_var_compare.c \
+										ft_newdico.c		\
+										ft_freedico.c)		 \
+			$(addprefix builtins/,		builtin_echo.c 		\
+										builtin_cd.c 		\
+										builtin_pwd.c		\
+										builtin_export.c	\
+										builtin_unset.c		\
+										builtin_env.c		\
+										builtin_exit.c)		\
+			$(addprefix parser/, 		parser.c 			\
+										path.c 				\
+										split_cmd.c 		\
+										split_redirect.c)	\
+			$(addprefix lexer/, 		is_prio.c 			\
+										is_redirect.c 		\
+										is_separator.c		\
+										is_word.c			\
+										lexer.c				\
+										tokens_alloc.c)		\
+			$(addprefix utils/, 		display_msg.c 		\
+										free.c				\
+										ft_atoll.c			\
+										ft_join3.c			\
+										ft_strndup.c		\
+										print2.c			\
+										print.c)			\
+			$(addprefix execution/,		main.c				\
+										interactive_session.c\
+										interactive_signals.c\
+										run_line.c			\
+										run_pipe_series.c	\
+										do_redirect.c)
+
+TMP =		$(addprefix tmp/,			ft_lstsort.c)
 
 # List of the related directories
 # -------------------------------------------------------------------------
 SRCS_DIR =	srcs
 HEAD_DIR =	includes libft/includes
-TEST_DIR = test
 
 # List of all compilation options
 # -------------------------------------------------------------------------
@@ -99,8 +130,7 @@ libfclean:
 
 # Custom rules
 # ------------------------------------------------------------------------
-TEST_O =	$(addprefix $(TEST_DIR)/,$(TEST:.c=.o))
-TEST_N =	$(TEST_O:.o=.out)
+TEST_N =	test_malloc
 
 debug:		all
 profile:	all
@@ -111,14 +141,14 @@ profile:	all
 
 test:		$(TEST_N)
 
-$(TEST_N):	$(OBJS) $(TEST_O) $(LIBFT)
-			$(CC) $(CFLAGS) -o $@ $(OBJS) $(@:.out=.o) $(LIB)
+$(TEST_N):	$(OBJS) $(LIBFT)
+			$(CC) $(CFLAGS) -o $@ $(OBJS) $(LIB)
 
 malloc_test:$(OBJS) $(TEST_O) $(LIBFT)
 			$(CC) $(CFLAGS) -fsanitize=undefined -rdynamic -o $@ $(OBJS) $(TEST_O) $(LIB) -L. -lmallocator
 
 t_clean:
-			$(RM) $(TEST_O) $(TEST_N)
+			$(RM) $(TEST_N)
 
 .PHONY:		debug profile test tclean
 
